// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inspect Should inspect for errors for no select: SELECT  FROM all_types: no select 1`] = `
Object {
  "code": 1,
  "end": 15,
  "message": "Unexpected token at 1:14",
  "start": 13,
}
`;

exports[`Inspect Should inspect for errors for wrong order: SELECT * FORM all_types: wrong order 1`] = `
Object {
  "code": 1,
  "end": 11,
  "message": "Unexpected token at 1:10",
  "start": 9,
}
`;

exports[`Inspect Should load completions for complex: 
      SELECT * FROM accounts
      JOIN contracts ON contracts.account_id = accounts.id
      LEFT JOIN installations ON contracts.installation_id = installations.id
      WHERE
        (accounts.end_on IS NULL OR accounts.end_on >= $start)
        AND accounts.state = ANY(ARRAY['Active', 'Pending Loss']::account_state[])
        AND contracts.exp‸ort_type = ANY(ARRAY['Metered Export','Deemed']::installation_export_type): complex 1`] = `
Array [
  Object {
    "name": "id",
    "source": undefined,
  },
  Object {
    "name": "scheme_type",
    "source": undefined,
  },
  Object {
    "name": "scheme_account_reference",
    "source": undefined,
  },
  Object {
    "name": "confirmation_on",
    "source": undefined,
  },
  Object {
    "name": "terms_and_conditions_agreed",
    "source": undefined,
  },
  Object {
    "name": "created_at",
    "source": undefined,
  },
  Object {
    "name": "updated_at",
    "source": undefined,
  },
  Object {
    "name": "installation_id",
    "source": undefined,
  },
  Object {
    "name": "generation_tariff_id",
    "source": undefined,
  },
  Object {
    "name": "export_tariff_id",
    "source": undefined,
  },
  Object {
    "name": "source_system_id",
    "source": undefined,
  },
  Object {
    "name": "export_percentage_split",
    "source": undefined,
  },
  Object {
    "name": "generation_percentage_split",
    "source": undefined,
  },
  Object {
    "name": "contact_id",
    "source": undefined,
  },
  Object {
    "name": "account_id",
    "source": undefined,
  },
  Object {
    "name": "capacity",
    "source": undefined,
  },
  Object {
    "name": "start_on",
    "source": undefined,
  },
  Object {
    "name": "end_on",
    "source": undefined,
  },
  Object {
    "name": "export_type",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for empty_column: SELECT all_types.‸empty_column FROM all_types: empty_column 1`] = `
Array [
  Object {
    "name": "id",
    "source": undefined,
  },
  Object {
    "name": "not_null",
    "source": "This column should never be null",
  },
  Object {
    "name": "default_not_null",
    "source": undefined,
  },
  Object {
    "name": "bigint_col",
    "source": undefined,
  },
  Object {
    "name": "bigserial_col",
    "source": undefined,
  },
  Object {
    "name": "bit_col",
    "source": undefined,
  },
  Object {
    "name": "bit_varying_col",
    "source": undefined,
  },
  Object {
    "name": "boolean_col",
    "source": undefined,
  },
  Object {
    "name": "box_col",
    "source": undefined,
  },
  Object {
    "name": "bytea_col",
    "source": undefined,
  },
  Object {
    "name": "character_col",
    "source": undefined,
  },
  Object {
    "name": "character_varying_col",
    "source": undefined,
  },
  Object {
    "name": "cidr_col",
    "source": undefined,
  },
  Object {
    "name": "circle_col",
    "source": undefined,
  },
  Object {
    "name": "date_col",
    "source": undefined,
  },
  Object {
    "name": "double_col",
    "source": undefined,
  },
  Object {
    "name": "inet_col",
    "source": undefined,
  },
  Object {
    "name": "integer_col",
    "source": undefined,
  },
  Object {
    "name": "interval_col",
    "source": undefined,
  },
  Object {
    "name": "json_col",
    "source": undefined,
  },
  Object {
    "name": "jsonb_col",
    "source": undefined,
  },
  Object {
    "name": "line_col",
    "source": undefined,
  },
  Object {
    "name": "lseg_col",
    "source": undefined,
  },
  Object {
    "name": "macaddr_col",
    "source": undefined,
  },
  Object {
    "name": "money_col",
    "source": undefined,
  },
  Object {
    "name": "numeric_col",
    "source": undefined,
  },
  Object {
    "name": "path_col",
    "source": undefined,
  },
  Object {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  Object {
    "name": "point_col",
    "source": undefined,
  },
  Object {
    "name": "polygon_col",
    "source": undefined,
  },
  Object {
    "name": "real_col",
    "source": undefined,
  },
  Object {
    "name": "smallint_col",
    "source": undefined,
  },
  Object {
    "name": "smallserial_col",
    "source": undefined,
  },
  Object {
    "name": "serial_col",
    "source": undefined,
  },
  Object {
    "name": "text_col",
    "source": undefined,
  },
  Object {
    "name": "time_col",
    "source": undefined,
  },
  Object {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "tsquery_col",
    "source": undefined,
  },
  Object {
    "name": "tsvector_col",
    "source": undefined,
  },
  Object {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  Object {
    "name": "uuid_col",
    "source": undefined,
  },
  Object {
    "name": "xml_col",
    "source": undefined,
  },
  Object {
    "name": "item",
    "source": undefined,
  },
  Object {
    "name": "state",
    "source": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
  },
  Object {
    "name": "state_arr",
    "source": undefined,
  },
  Object {
    "name": "item_arr",
    "source": undefined,
  },
  Object {
    "name": "static_arr",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for end of column: SELECT all_types.id‸ FROM all_types: end of column 1`] = `
Array [
  Object {
    "name": "id",
    "source": undefined,
  },
  Object {
    "name": "not_null",
    "source": "This column should never be null",
  },
  Object {
    "name": "default_not_null",
    "source": undefined,
  },
  Object {
    "name": "bigint_col",
    "source": undefined,
  },
  Object {
    "name": "bigserial_col",
    "source": undefined,
  },
  Object {
    "name": "bit_col",
    "source": undefined,
  },
  Object {
    "name": "bit_varying_col",
    "source": undefined,
  },
  Object {
    "name": "boolean_col",
    "source": undefined,
  },
  Object {
    "name": "box_col",
    "source": undefined,
  },
  Object {
    "name": "bytea_col",
    "source": undefined,
  },
  Object {
    "name": "character_col",
    "source": undefined,
  },
  Object {
    "name": "character_varying_col",
    "source": undefined,
  },
  Object {
    "name": "cidr_col",
    "source": undefined,
  },
  Object {
    "name": "circle_col",
    "source": undefined,
  },
  Object {
    "name": "date_col",
    "source": undefined,
  },
  Object {
    "name": "double_col",
    "source": undefined,
  },
  Object {
    "name": "inet_col",
    "source": undefined,
  },
  Object {
    "name": "integer_col",
    "source": undefined,
  },
  Object {
    "name": "interval_col",
    "source": undefined,
  },
  Object {
    "name": "json_col",
    "source": undefined,
  },
  Object {
    "name": "jsonb_col",
    "source": undefined,
  },
  Object {
    "name": "line_col",
    "source": undefined,
  },
  Object {
    "name": "lseg_col",
    "source": undefined,
  },
  Object {
    "name": "macaddr_col",
    "source": undefined,
  },
  Object {
    "name": "money_col",
    "source": undefined,
  },
  Object {
    "name": "numeric_col",
    "source": undefined,
  },
  Object {
    "name": "path_col",
    "source": undefined,
  },
  Object {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  Object {
    "name": "point_col",
    "source": undefined,
  },
  Object {
    "name": "polygon_col",
    "source": undefined,
  },
  Object {
    "name": "real_col",
    "source": undefined,
  },
  Object {
    "name": "smallint_col",
    "source": undefined,
  },
  Object {
    "name": "smallserial_col",
    "source": undefined,
  },
  Object {
    "name": "serial_col",
    "source": undefined,
  },
  Object {
    "name": "text_col",
    "source": undefined,
  },
  Object {
    "name": "time_col",
    "source": undefined,
  },
  Object {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "tsquery_col",
    "source": undefined,
  },
  Object {
    "name": "tsvector_col",
    "source": undefined,
  },
  Object {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  Object {
    "name": "uuid_col",
    "source": undefined,
  },
  Object {
    "name": "xml_col",
    "source": undefined,
  },
  Object {
    "name": "item",
    "source": undefined,
  },
  Object {
    "name": "state",
    "source": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
  },
  Object {
    "name": "state_arr",
    "source": undefined,
  },
  Object {
    "name": "item_arr",
    "source": undefined,
  },
  Object {
    "name": "static_arr",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for enum left: SELECT * FROM all_types WHERE 'A‸ctive' = all_types.state: enum left 1`] = `
Array [
  Object {
    "name": "Active",
  },
  Object {
    "name": "Pending",
  },
  Object {
    "name": "Dispute",
  },
  Object {
    "name": "Closed",
  },
]
`;

exports[`Inspect Should load completions for enum right: SELECT * FROM all_types WHERE all_types.state = 'A‸ctive': enum right 1`] = `
Array [
  Object {
    "name": "Active",
  },
  Object {
    "name": "Pending",
  },
  Object {
    "name": "Dispute",
  },
  Object {
    "name": "Closed",
  },
]
`;

exports[`Inspect Should load completions for insert column: INSERT INTO all_types(id, sta‸te) VALUES (1, 'Active'): insert column 1`] = `
Array [
  Object {
    "name": "id",
    "source": undefined,
  },
  Object {
    "name": "not_null",
    "source": "This column should never be null",
  },
  Object {
    "name": "default_not_null",
    "source": undefined,
  },
  Object {
    "name": "bigint_col",
    "source": undefined,
  },
  Object {
    "name": "bigserial_col",
    "source": undefined,
  },
  Object {
    "name": "bit_col",
    "source": undefined,
  },
  Object {
    "name": "bit_varying_col",
    "source": undefined,
  },
  Object {
    "name": "boolean_col",
    "source": undefined,
  },
  Object {
    "name": "box_col",
    "source": undefined,
  },
  Object {
    "name": "bytea_col",
    "source": undefined,
  },
  Object {
    "name": "character_col",
    "source": undefined,
  },
  Object {
    "name": "character_varying_col",
    "source": undefined,
  },
  Object {
    "name": "cidr_col",
    "source": undefined,
  },
  Object {
    "name": "circle_col",
    "source": undefined,
  },
  Object {
    "name": "date_col",
    "source": undefined,
  },
  Object {
    "name": "double_col",
    "source": undefined,
  },
  Object {
    "name": "inet_col",
    "source": undefined,
  },
  Object {
    "name": "integer_col",
    "source": undefined,
  },
  Object {
    "name": "interval_col",
    "source": undefined,
  },
  Object {
    "name": "json_col",
    "source": undefined,
  },
  Object {
    "name": "jsonb_col",
    "source": undefined,
  },
  Object {
    "name": "line_col",
    "source": undefined,
  },
  Object {
    "name": "lseg_col",
    "source": undefined,
  },
  Object {
    "name": "macaddr_col",
    "source": undefined,
  },
  Object {
    "name": "money_col",
    "source": undefined,
  },
  Object {
    "name": "numeric_col",
    "source": undefined,
  },
  Object {
    "name": "path_col",
    "source": undefined,
  },
  Object {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  Object {
    "name": "point_col",
    "source": undefined,
  },
  Object {
    "name": "polygon_col",
    "source": undefined,
  },
  Object {
    "name": "real_col",
    "source": undefined,
  },
  Object {
    "name": "smallint_col",
    "source": undefined,
  },
  Object {
    "name": "smallserial_col",
    "source": undefined,
  },
  Object {
    "name": "serial_col",
    "source": undefined,
  },
  Object {
    "name": "text_col",
    "source": undefined,
  },
  Object {
    "name": "time_col",
    "source": undefined,
  },
  Object {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "tsquery_col",
    "source": undefined,
  },
  Object {
    "name": "tsvector_col",
    "source": undefined,
  },
  Object {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  Object {
    "name": "uuid_col",
    "source": undefined,
  },
  Object {
    "name": "xml_col",
    "source": undefined,
  },
  Object {
    "name": "item",
    "source": undefined,
  },
  Object {
    "name": "state",
    "source": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
  },
  Object {
    "name": "state_arr",
    "source": undefined,
  },
  Object {
    "name": "item_arr",
    "source": undefined,
  },
  Object {
    "name": "static_arr",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for partial from: SELECT all_types.id FROM a‸: partial from 1`] = `
Array [
  Object {
    "name": "account_levelisations",
    "source": undefined,
  },
  Object {
    "name": "accounts",
    "source": undefined,
  },
  Object {
    "name": "active_reads",
    "source": undefined,
  },
  Object {
    "name": "addresses",
    "source": undefined,
  },
  Object {
    "name": "all_types",
    "source": "All the postgres types",
  },
  Object {
    "name": "all_types_view",
    "source": "Summurized view",
  },
  Object {
    "name": "authors",
    "source": undefined,
  },
  Object {
    "name": "book_orders",
    "source": undefined,
  },
  Object {
    "name": "books",
    "source": undefined,
  },
  Object {
    "name": "contacts",
    "source": undefined,
  },
  Object {
    "name": "contracts",
    "source": undefined,
  },
  Object {
    "name": "customers",
    "source": undefined,
  },
  Object {
    "name": "installation_meters",
    "source": undefined,
  },
  Object {
    "name": "installations",
    "source": undefined,
  },
  Object {
    "name": "issues",
    "source": undefined,
  },
  Object {
    "name": "levelisations",
    "source": undefined,
  },
  Object {
    "name": "meter_reads",
    "source": undefined,
  },
  Object {
    "name": "meter_registers",
    "source": undefined,
  },
  Object {
    "name": "meters",
    "source": undefined,
  },
  Object {
    "name": "orders",
    "source": undefined,
  },
  Object {
    "name": "payments",
    "source": undefined,
  },
  Object {
    "name": "process_items",
    "source": undefined,
  },
  Object {
    "name": "tariff_rates",
    "source": undefined,
  },
  Object {
    "name": "tariffs",
    "source": undefined,
  },
  Object {
    "name": "transactions",
    "source": undefined,
  },
  Object {
    "name": "unlevelised_active_reads",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for schema column: SELECT fit‸ FROM fit.FiTAccount: schema column 1`] = `
Array [
  Object {
    "name": "FiTAccountId",
    "source": undefined,
  },
  Object {
    "name": "FitAccountReference",
    "source": undefined,
  },
  Object {
    "name": "IsAccountInDispute",
    "source": undefined,
  },
  Object {
    "name": "IsActive",
    "source": undefined,
  },
  Object {
    "name": "DateInserted",
    "source": undefined,
  },
  Object {
    "name": "DateUpdated",
    "source": undefined,
  },
  Object {
    "name": "WhoInserted",
    "source": undefined,
  },
  Object {
    "name": "WhoUpdated",
    "source": undefined,
  },
  Object {
    "name": "DateDisputeStart",
    "source": undefined,
  },
  Object {
    "name": "DateDisputeEnd",
    "source": undefined,
  },
  Object {
    "name": "FiTAccount",
    "source": "Table",
  },
]
`;

exports[`Inspect Should load completions for schema table: SELECT "FiTAccountId" FROM fit.‸FiTAccount: schema table 1`] = `
Array [
  Object {
    "name": "address",
    "source": undefined,
  },
  Object {
    "name": "addresstype",
    "source": undefined,
  },
  Object {
    "name": "auditcsa",
    "source": undefined,
  },
  Object {
    "name": "bankaccount",
    "source": undefined,
  },
  Object {
    "name": "bankaccountaudit",
    "source": undefined,
  },
  Object {
    "name": "checklist",
    "source": undefined,
  },
  Object {
    "name": "configuration",
    "source": undefined,
  },
  Object {
    "name": "customer",
    "source": undefined,
  },
  Object {
    "name": "customeraccount",
    "source": undefined,
  },
  Object {
    "name": "customeraddress",
    "source": undefined,
  },
  Object {
    "name": "customerrole",
    "source": undefined,
  },
  Object {
    "name": "customersequence",
    "source": undefined,
  },
  Object {
    "name": "document",
    "source": undefined,
  },
  Object {
    "name": "documenttype",
    "source": undefined,
  },
  Object {
    "name": "failedmeterreading",
    "source": undefined,
  },
  Object {
    "name": "failedvalidationimport",
    "source": undefined,
  },
  Object {
    "name": "fitaccount",
    "source": undefined,
  },
  Object {
    "name": "fitaccountsequence",
    "source": undefined,
  },
  Object {
    "name": "generationaccount",
    "source": undefined,
  },
  Object {
    "name": "generationaccountinstallation",
    "source": undefined,
  },
  Object {
    "name": "generatortechnologytype",
    "source": undefined,
  },
  Object {
    "name": "gentrackaccount",
    "source": undefined,
  },
  Object {
    "name": "installation",
    "source": undefined,
  },
  Object {
    "name": "installationmeter",
    "source": undefined,
  },
  Object {
    "name": "installationsequence",
    "source": undefined,
  },
  Object {
    "name": "installationtype",
    "source": undefined,
  },
  Object {
    "name": "installationverificationinfo",
    "source": undefined,
  },
  Object {
    "name": "loadfactor",
    "source": undefined,
  },
  Object {
    "name": "memo",
    "source": undefined,
  },
  Object {
    "name": "meter",
    "source": undefined,
  },
  Object {
    "name": "metermodel",
    "source": undefined,
  },
  Object {
    "name": "meterreading",
    "source": undefined,
  },
  Object {
    "name": "meterreadinghistory",
    "source": undefined,
  },
  Object {
    "name": "metertype",
    "source": undefined,
  },
  Object {
    "name": "payment",
    "source": undefined,
  },
  Object {
    "name": "propertytype",
    "source": undefined,
  },
  Object {
    "name": "securityquestion",
    "source": undefined,
  },
  Object {
    "name": "segaccountsequence",
    "source": undefined,
  },
  Object {
    "name": "switch",
    "source": undefined,
  },
  Object {
    "name": "tariff",
    "source": undefined,
  },
  Object {
    "name": "tariffexportrate",
    "source": undefined,
  },
  Object {
    "name": "tariffrate",
    "source": undefined,
  },
  Object {
    "name": "tarifftype",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for select cast type: SELECT 'Active'::s‸t: select cast type 1`] = `
Array [
  Object {
    "name": "account_levelisation_state",
    "source": undefined,
  },
  Object {
    "name": "account_payment_plans",
    "source": undefined,
  },
  Object {
    "name": "account_state",
    "source": "Lifecycle of account",
  },
  Object {
    "name": "contact_titles",
    "source": undefined,
  },
  Object {
    "name": "contract_scheme_types",
    "source": undefined,
  },
  Object {
    "name": "installation_export_type",
    "source": undefined,
  },
  Object {
    "name": "installation_property_type",
    "source": undefined,
  },
  Object {
    "name": "installation_technology_types",
    "source": undefined,
  },
  Object {
    "name": "installation_types",
    "source": undefined,
  },
  Object {
    "name": "inventory_item",
    "source": undefined,
  },
  Object {
    "name": "issue_reference_type",
    "source": undefined,
  },
  Object {
    "name": "issue_state",
    "source": undefined,
  },
  Object {
    "name": "issue_type",
    "source": undefined,
  },
  Object {
    "name": "meter_reads_types",
    "source": undefined,
  },
  Object {
    "name": "meter_types",
    "source": undefined,
  },
  Object {
    "name": "order_state",
    "source": undefined,
  },
  Object {
    "name": "payments_type",
    "source": undefined,
  },
  Object {
    "name": "process_item_status",
    "source": undefined,
  },
  Object {
    "name": "tariff_types",
    "source": undefined,
  },
  Object {
    "name": "transaction_history",
    "source": undefined,
  },
  Object {
    "name": "transaction_state",
    "source": undefined,
  },
  Object {
    "name": "bool",
    "source": "Native",
  },
  Object {
    "name": "char",
    "source": "Native",
  },
  Object {
    "name": "varchar",
    "source": "Native",
  },
  Object {
    "name": "int",
    "source": "Native",
  },
  Object {
    "name": "decimal",
    "source": "Native",
  },
  Object {
    "name": "float",
    "source": "Native",
  },
  Object {
    "name": "serial",
    "source": "Native",
  },
  Object {
    "name": "date",
    "source": "Native",
  },
  Object {
    "name": "timestamp",
    "source": "Native",
  },
  Object {
    "name": "time",
    "source": "Native",
  },
]
`;

exports[`Inspect Should load completions for single column 1: SELECT all_types.i‸d FROM all_types: single column 1 1`] = `
Array [
  Object {
    "name": "id",
    "source": undefined,
  },
  Object {
    "name": "not_null",
    "source": "This column should never be null",
  },
  Object {
    "name": "default_not_null",
    "source": undefined,
  },
  Object {
    "name": "bigint_col",
    "source": undefined,
  },
  Object {
    "name": "bigserial_col",
    "source": undefined,
  },
  Object {
    "name": "bit_col",
    "source": undefined,
  },
  Object {
    "name": "bit_varying_col",
    "source": undefined,
  },
  Object {
    "name": "boolean_col",
    "source": undefined,
  },
  Object {
    "name": "box_col",
    "source": undefined,
  },
  Object {
    "name": "bytea_col",
    "source": undefined,
  },
  Object {
    "name": "character_col",
    "source": undefined,
  },
  Object {
    "name": "character_varying_col",
    "source": undefined,
  },
  Object {
    "name": "cidr_col",
    "source": undefined,
  },
  Object {
    "name": "circle_col",
    "source": undefined,
  },
  Object {
    "name": "date_col",
    "source": undefined,
  },
  Object {
    "name": "double_col",
    "source": undefined,
  },
  Object {
    "name": "inet_col",
    "source": undefined,
  },
  Object {
    "name": "integer_col",
    "source": undefined,
  },
  Object {
    "name": "interval_col",
    "source": undefined,
  },
  Object {
    "name": "json_col",
    "source": undefined,
  },
  Object {
    "name": "jsonb_col",
    "source": undefined,
  },
  Object {
    "name": "line_col",
    "source": undefined,
  },
  Object {
    "name": "lseg_col",
    "source": undefined,
  },
  Object {
    "name": "macaddr_col",
    "source": undefined,
  },
  Object {
    "name": "money_col",
    "source": undefined,
  },
  Object {
    "name": "numeric_col",
    "source": undefined,
  },
  Object {
    "name": "path_col",
    "source": undefined,
  },
  Object {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  Object {
    "name": "point_col",
    "source": undefined,
  },
  Object {
    "name": "polygon_col",
    "source": undefined,
  },
  Object {
    "name": "real_col",
    "source": undefined,
  },
  Object {
    "name": "smallint_col",
    "source": undefined,
  },
  Object {
    "name": "smallserial_col",
    "source": undefined,
  },
  Object {
    "name": "serial_col",
    "source": undefined,
  },
  Object {
    "name": "text_col",
    "source": undefined,
  },
  Object {
    "name": "time_col",
    "source": undefined,
  },
  Object {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "tsquery_col",
    "source": undefined,
  },
  Object {
    "name": "tsvector_col",
    "source": undefined,
  },
  Object {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  Object {
    "name": "uuid_col",
    "source": undefined,
  },
  Object {
    "name": "xml_col",
    "source": undefined,
  },
  Object {
    "name": "item",
    "source": undefined,
  },
  Object {
    "name": "state",
    "source": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
  },
  Object {
    "name": "state_arr",
    "source": undefined,
  },
  Object {
    "name": "item_arr",
    "source": undefined,
  },
  Object {
    "name": "static_arr",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for single column 2: SELECT all_types.‸id FROM all_types: single column 2 1`] = `
Array [
  Object {
    "name": "id",
    "source": undefined,
  },
  Object {
    "name": "not_null",
    "source": "This column should never be null",
  },
  Object {
    "name": "default_not_null",
    "source": undefined,
  },
  Object {
    "name": "bigint_col",
    "source": undefined,
  },
  Object {
    "name": "bigserial_col",
    "source": undefined,
  },
  Object {
    "name": "bit_col",
    "source": undefined,
  },
  Object {
    "name": "bit_varying_col",
    "source": undefined,
  },
  Object {
    "name": "boolean_col",
    "source": undefined,
  },
  Object {
    "name": "box_col",
    "source": undefined,
  },
  Object {
    "name": "bytea_col",
    "source": undefined,
  },
  Object {
    "name": "character_col",
    "source": undefined,
  },
  Object {
    "name": "character_varying_col",
    "source": undefined,
  },
  Object {
    "name": "cidr_col",
    "source": undefined,
  },
  Object {
    "name": "circle_col",
    "source": undefined,
  },
  Object {
    "name": "date_col",
    "source": undefined,
  },
  Object {
    "name": "double_col",
    "source": undefined,
  },
  Object {
    "name": "inet_col",
    "source": undefined,
  },
  Object {
    "name": "integer_col",
    "source": undefined,
  },
  Object {
    "name": "interval_col",
    "source": undefined,
  },
  Object {
    "name": "json_col",
    "source": undefined,
  },
  Object {
    "name": "jsonb_col",
    "source": undefined,
  },
  Object {
    "name": "line_col",
    "source": undefined,
  },
  Object {
    "name": "lseg_col",
    "source": undefined,
  },
  Object {
    "name": "macaddr_col",
    "source": undefined,
  },
  Object {
    "name": "money_col",
    "source": undefined,
  },
  Object {
    "name": "numeric_col",
    "source": undefined,
  },
  Object {
    "name": "path_col",
    "source": undefined,
  },
  Object {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  Object {
    "name": "point_col",
    "source": undefined,
  },
  Object {
    "name": "polygon_col",
    "source": undefined,
  },
  Object {
    "name": "real_col",
    "source": undefined,
  },
  Object {
    "name": "smallint_col",
    "source": undefined,
  },
  Object {
    "name": "smallserial_col",
    "source": undefined,
  },
  Object {
    "name": "serial_col",
    "source": undefined,
  },
  Object {
    "name": "text_col",
    "source": undefined,
  },
  Object {
    "name": "time_col",
    "source": undefined,
  },
  Object {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "tsquery_col",
    "source": undefined,
  },
  Object {
    "name": "tsvector_col",
    "source": undefined,
  },
  Object {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  Object {
    "name": "uuid_col",
    "source": undefined,
  },
  Object {
    "name": "xml_col",
    "source": undefined,
  },
  Object {
    "name": "item",
    "source": undefined,
  },
  Object {
    "name": "state",
    "source": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
  },
  Object {
    "name": "state_arr",
    "source": undefined,
  },
  Object {
    "name": "item_arr",
    "source": undefined,
  },
  Object {
    "name": "static_arr",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for single table: SELECT all_types.id FROM all_‸types: single table 1`] = `
Array [
  Object {
    "name": "account_levelisations",
    "source": undefined,
  },
  Object {
    "name": "accounts",
    "source": undefined,
  },
  Object {
    "name": "active_reads",
    "source": undefined,
  },
  Object {
    "name": "addresses",
    "source": undefined,
  },
  Object {
    "name": "all_types",
    "source": "All the postgres types",
  },
  Object {
    "name": "all_types_view",
    "source": "Summurized view",
  },
  Object {
    "name": "authors",
    "source": undefined,
  },
  Object {
    "name": "book_orders",
    "source": undefined,
  },
  Object {
    "name": "books",
    "source": undefined,
  },
  Object {
    "name": "contacts",
    "source": undefined,
  },
  Object {
    "name": "contracts",
    "source": undefined,
  },
  Object {
    "name": "customers",
    "source": undefined,
  },
  Object {
    "name": "installation_meters",
    "source": undefined,
  },
  Object {
    "name": "installations",
    "source": undefined,
  },
  Object {
    "name": "issues",
    "source": undefined,
  },
  Object {
    "name": "levelisations",
    "source": undefined,
  },
  Object {
    "name": "meter_reads",
    "source": undefined,
  },
  Object {
    "name": "meter_registers",
    "source": undefined,
  },
  Object {
    "name": "meters",
    "source": undefined,
  },
  Object {
    "name": "orders",
    "source": undefined,
  },
  Object {
    "name": "payments",
    "source": undefined,
  },
  Object {
    "name": "process_items",
    "source": undefined,
  },
  Object {
    "name": "tariff_rates",
    "source": undefined,
  },
  Object {
    "name": "tariffs",
    "source": undefined,
  },
  Object {
    "name": "transactions",
    "source": undefined,
  },
  Object {
    "name": "unlevelised_active_reads",
    "source": undefined,
  },
]
`;

exports[`Inspect Should load completions for tables and columns: SELECT i‸d FROM all_types JOIN accounts ON all_types.id = accounts.id: tables and columns 1`] = `
Array [
  Object {
    "name": "not_null",
    "source": "This column should never be null",
  },
  Object {
    "name": "default_not_null",
    "source": undefined,
  },
  Object {
    "name": "bigint_col",
    "source": undefined,
  },
  Object {
    "name": "bigserial_col",
    "source": undefined,
  },
  Object {
    "name": "bit_col",
    "source": undefined,
  },
  Object {
    "name": "bit_varying_col",
    "source": undefined,
  },
  Object {
    "name": "boolean_col",
    "source": undefined,
  },
  Object {
    "name": "box_col",
    "source": undefined,
  },
  Object {
    "name": "bytea_col",
    "source": undefined,
  },
  Object {
    "name": "character_col",
    "source": undefined,
  },
  Object {
    "name": "character_varying_col",
    "source": undefined,
  },
  Object {
    "name": "cidr_col",
    "source": undefined,
  },
  Object {
    "name": "circle_col",
    "source": undefined,
  },
  Object {
    "name": "date_col",
    "source": undefined,
  },
  Object {
    "name": "double_col",
    "source": undefined,
  },
  Object {
    "name": "inet_col",
    "source": undefined,
  },
  Object {
    "name": "integer_col",
    "source": undefined,
  },
  Object {
    "name": "interval_col",
    "source": undefined,
  },
  Object {
    "name": "json_col",
    "source": undefined,
  },
  Object {
    "name": "jsonb_col",
    "source": undefined,
  },
  Object {
    "name": "line_col",
    "source": undefined,
  },
  Object {
    "name": "lseg_col",
    "source": undefined,
  },
  Object {
    "name": "macaddr_col",
    "source": undefined,
  },
  Object {
    "name": "money_col",
    "source": undefined,
  },
  Object {
    "name": "numeric_col",
    "source": undefined,
  },
  Object {
    "name": "path_col",
    "source": undefined,
  },
  Object {
    "name": "pg_lsn_col",
    "source": undefined,
  },
  Object {
    "name": "point_col",
    "source": undefined,
  },
  Object {
    "name": "polygon_col",
    "source": undefined,
  },
  Object {
    "name": "real_col",
    "source": undefined,
  },
  Object {
    "name": "smallint_col",
    "source": undefined,
  },
  Object {
    "name": "smallserial_col",
    "source": undefined,
  },
  Object {
    "name": "serial_col",
    "source": undefined,
  },
  Object {
    "name": "text_col",
    "source": undefined,
  },
  Object {
    "name": "time_col",
    "source": undefined,
  },
  Object {
    "name": "time_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_col",
    "source": undefined,
  },
  Object {
    "name": "timestamp_with_time_zone_col",
    "source": undefined,
  },
  Object {
    "name": "tsquery_col",
    "source": undefined,
  },
  Object {
    "name": "tsvector_col",
    "source": undefined,
  },
  Object {
    "name": "txid_snapshot_col",
    "source": undefined,
  },
  Object {
    "name": "uuid_col",
    "source": undefined,
  },
  Object {
    "name": "xml_col",
    "source": undefined,
  },
  Object {
    "name": "item",
    "source": undefined,
  },
  Object {
    "name": "state_arr",
    "source": undefined,
  },
  Object {
    "name": "item_arr",
    "source": undefined,
  },
  Object {
    "name": "static_arr",
    "source": undefined,
  },
  Object {
    "name": "customer_id",
    "source": undefined,
  },
  Object {
    "name": "beneficiary_name",
    "source": undefined,
  },
  Object {
    "name": "beneficiary_sort_code",
    "source": undefined,
  },
  Object {
    "name": "beneficiary_account_number",
    "source": undefined,
  },
  Object {
    "name": "payment_plan",
    "source": undefined,
  },
  Object {
    "name": "payment_suspended",
    "source": undefined,
  },
  Object {
    "name": "company_reg_number",
    "source": undefined,
  },
  Object {
    "name": "company_name",
    "source": undefined,
  },
  Object {
    "name": "company_vat_number",
    "source": undefined,
  },
  Object {
    "name": "created_at",
    "source": undefined,
  },
  Object {
    "name": "updated_at",
    "source": undefined,
  },
  Object {
    "name": "source_system_id",
    "source": undefined,
  },
  Object {
    "name": "start_on",
    "source": undefined,
  },
  Object {
    "name": "end_on",
    "source": undefined,
  },
  Object {
    "name": "all_types",
    "source": "Table",
  },
  Object {
    "name": "accounts",
    "source": "Table",
  },
]
`;

exports[`Inspect Should load quick info for binary expression column: SELECT * FROM all_types WHERE id = 1 AND stat‸e = 'Active': binary expression column 1`] = `
Object {
  "description": "From: all_types Table

---


  This column is an enum.
  It also contains several lines:
    - line1
    - line2


---

Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "state account_state",
  "end": 45,
  "start": 41,
}
`;

exports[`Inspect Should load quick info for column: SELECT all_types.i‸d FROM all_types: column 1`] = `
Object {
  "description": "From: all_types Table",
  "display": "id integer NOT NULL",
  "end": 18,
  "start": 17,
}
`;

exports[`Inspect Should load quick info for composite: SELECT all_types.it‸em FROM all_types: composite 1`] = `
Object {
  "description": "From: all_types Table

---

|Name|Type|
|---|---|
|name|**text** \`NULL\`|
|supplier_id|**integer** \`NULL\`|
|price|**numeric** \`NULL\`|",
  "display": "item inventory_item NOT NULL",
  "end": 20,
  "start": 17,
}
`;

exports[`Inspect Should load quick info for enum left: SELECT * FROM all_types WHERE 'A‸ctive' = all_types.state: enum left 1`] = `
Object {
  "description": "Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "Enum",
  "end": 37,
  "start": 30,
}
`;

exports[`Inspect Should load quick info for enum right: SELECT * FROM all_types WHERE all_types.state = 'A‸ctive': enum right 1`] = `
Object {
  "description": "Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "Enum",
  "end": 55,
  "start": 48,
}
`;

exports[`Inspect Should load quick info for enum: SELECT all_types.sta‸te FROM all_types: enum 1`] = `
Object {
  "description": "From: all_types Table

---


  This column is an enum.
  It also contains several lines:
    - line1
    - line2


---

Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "state account_state",
  "end": 21,
  "start": 17,
}
`;

exports[`Inspect Should load quick info for function info: SELECT date_to_seg_q‸uarter('2022-01-01'): function info 1`] = `
Object {
  "description": "SEG(Smart Export Guarantee) quarter identifier from the start of the program - 2019-01-01",
  "display": "date_to_seg_quarter (date): text",
  "end": 39,
  "start": 7,
}
`;

exports[`Inspect Should load quick info for insert column: INSERT INTO all_types(id, sta‸te) VALUES (1, 'Active'): insert column 1`] = `
Object {
  "description": "From: all_types Table

---


  This column is an enum.
  It also contains several lines:
    - line1
    - line2


---

Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "state account_state",
  "end": 30,
  "start": 26,
}
`;

exports[`Inspect Should load quick info for join alias direct: SELECT * FROM all_types LEFT JOIN accounts AS a‸cc ON all_types.id = acc.id: join alias direct 1`] = `
Object {
  "description": "|Name|Type|
|---|---|
|id|**integer** \`NOT_NULL\`|
|customer_id|**integer** \`NOT_NULL\`|
|state|**account_state** \`NOT_NULL\`|
|beneficiary_name|**character varying** \`NULL\`|
|beneficiary_sort_code|**character varying** \`NULL\`|
|beneficiary_account_number|**character varying** \`NULL\`|
|payment_plan|**account_payment_plans** \`NULL\`|
|payment_suspended|**boolean** \`NULL\`|
|company_reg_number|**character varying** \`NULL\`|
|company_name|**character varying** \`NULL\`|
|company_vat_number|**character varying** \`NULL\`|
|created_at|**timestamp** \`NOT_NULL\`|
|updated_at|**timestamp** \`NULL\`|
|source_system_id|**integer** \`NULL\`|
|start_on|**date** \`NULL\`|
|end_on|**date** \`NULL\`|",
  "display": "accounts AS acc Table",
  "end": 48,
  "start": 43,
}
`;

exports[`Inspect Should load quick info for join alias table: SELECT * FROM all_types JOIN accou‸nts AS acc ON all_types.id = acc.id: join alias table 1`] = `
Object {
  "description": "|Name|Type|
|---|---|
|id|**integer** \`NOT_NULL\`|
|customer_id|**integer** \`NOT_NULL\`|
|state|**account_state** \`NOT_NULL\`|
|beneficiary_name|**character varying** \`NULL\`|
|beneficiary_sort_code|**character varying** \`NULL\`|
|beneficiary_account_number|**character varying** \`NULL\`|
|payment_plan|**account_payment_plans** \`NULL\`|
|payment_suspended|**boolean** \`NULL\`|
|company_reg_number|**character varying** \`NULL\`|
|company_name|**character varying** \`NULL\`|
|company_vat_number|**character varying** \`NULL\`|
|created_at|**timestamp** \`NOT_NULL\`|
|updated_at|**timestamp** \`NULL\`|
|source_system_id|**integer** \`NULL\`|
|start_on|**date** \`NULL\`|
|end_on|**date** \`NULL\`|",
  "display": "accounts AS acc Table",
  "end": 36,
  "start": 29,
}
`;

exports[`Inspect Should load quick info for select cast type: SELECT 'Active'::ac‸count_state: select cast type 1`] = `
Object {
  "description": "Lifecycle of account

---

|Variants|
|---|
|Active|
|Pending|
|Dispute|
|Closed|",
  "display": "Enum",
  "end": 29,
  "start": 17,
}
`;

exports[`Inspect Should load quick info for source: SELECT all_ty‸pes.id FROM all_types: source 1`] = `
Object {
  "description": "|Name|Type|
|---|---|
|id|**integer** \`NOT_NULL\`|
|not_null|**integer** \`NOT_NULL\`|
||This column should never be null|
|default_not_null|**integer** \`NOT_NULL\`|
|bigint_col|**bigint** \`NULL\`|
|bigserial_col|**bigint** \`NOT_NULL\`|
|bit_col|**bit** \`NULL\`|
|bit_varying_col|**bit varying** \`NULL\`|
|boolean_col|**boolean** \`NULL\`|
|box_col|**box** \`NULL\`|
|bytea_col|**bytea** \`NULL\`|
|character_col|**character** \`NULL\`|
|character_varying_col|**character varying** \`NULL\`|
|cidr_col|**cidr** \`NULL\`|
|circle_col|**circle** \`NULL\`|
|date_col|**date** \`NULL\`|
|double_col|**double precision** \`NULL\`|
|inet_col|**inet** \`NULL\`|
|integer_col|**integer** \`NULL\`|
|interval_col|**interval** \`NULL\`|
|json_col|**json** \`NULL\`|
|jsonb_col|**jsonb** \`NULL\`|
|line_col|**line** \`NULL\`|
|lseg_col|**lseg** \`NULL\`|
|macaddr_col|**macaddr** \`NULL\`|
|money_col|**money** \`NULL\`|
|numeric_col|**numeric** \`NULL\`|
|path_col|**path** \`NULL\`|
|pg_lsn_col|**pg_lsn** \`NULL\`|
|point_col|**point** \`NULL\`|
|polygon_col|**polygon** \`NULL\`|
|real_col|**real** \`NULL\`|
|smallint_col|**smallint** \`NULL\`|
|smallserial_col|**smallint** \`NOT_NULL\`|
|serial_col|**integer** \`NOT_NULL\`|
|text_col|**text** \`NULL\`|
|time_col|**time** \`NULL\`|
|time_with_time_zone_col|**timetz** \`NULL\`|
|timestamp_col|**timestamp** \`NULL\`|
|timestamp_with_time_zone_col|**timestamptz** \`NULL\`|
|tsquery_col|**tsquery** \`NULL\`|
|tsvector_col|**tsvector** \`NULL\`|
|txid_snapshot_col|**txid_snapshot** \`NULL\`|
|uuid_col|**uuid** \`NULL\`|
|xml_col|**xml** \`NULL\`|
|item|**inventory_item** \`NOT_NULL\`|
|state|**account_state** \`NULL\`|
||This column is an enum.|
||  It also contains several lines:|
||    - line1|
||    - line2|
|state_arr|**account_state[]** \`NULL\`|
|item_arr|**inventory_item[]** \`NULL\`|
|static_arr|**int8[]** \`NULL\`|",
  "display": "all_types Table",
  "end": 15,
  "start": 7,
}
`;

exports[`Inspect Should load quick info for table: SELECT all_types.id FROM all‸_types: table 1`] = `
Object {
  "description": "All the postgres types

---

|Name|Type|
|---|---|
|id|**integer** \`NOT_NULL\`|
|not_null|**integer** \`NOT_NULL\`|
||This column should never be null|
|default_not_null|**integer** \`NOT_NULL\`|
|bigint_col|**bigint** \`NULL\`|
|bigserial_col|**bigint** \`NOT_NULL\`|
|bit_col|**bit** \`NULL\`|
|bit_varying_col|**bit varying** \`NULL\`|
|boolean_col|**boolean** \`NULL\`|
|box_col|**box** \`NULL\`|
|bytea_col|**bytea** \`NULL\`|
|character_col|**character** \`NULL\`|
|character_varying_col|**character varying** \`NULL\`|
|cidr_col|**cidr** \`NULL\`|
|circle_col|**circle** \`NULL\`|
|date_col|**date** \`NULL\`|
|double_col|**double precision** \`NULL\`|
|inet_col|**inet** \`NULL\`|
|integer_col|**integer** \`NULL\`|
|interval_col|**interval** \`NULL\`|
|json_col|**json** \`NULL\`|
|jsonb_col|**jsonb** \`NULL\`|
|line_col|**line** \`NULL\`|
|lseg_col|**lseg** \`NULL\`|
|macaddr_col|**macaddr** \`NULL\`|
|money_col|**money** \`NULL\`|
|numeric_col|**numeric** \`NULL\`|
|path_col|**path** \`NULL\`|
|pg_lsn_col|**pg_lsn** \`NULL\`|
|point_col|**point** \`NULL\`|
|polygon_col|**polygon** \`NULL\`|
|real_col|**real** \`NULL\`|
|smallint_col|**smallint** \`NULL\`|
|smallserial_col|**smallint** \`NOT_NULL\`|
|serial_col|**integer** \`NOT_NULL\`|
|text_col|**text** \`NULL\`|
|time_col|**time** \`NULL\`|
|time_with_time_zone_col|**timetz** \`NULL\`|
|timestamp_col|**timestamp** \`NULL\`|
|timestamp_with_time_zone_col|**timestamptz** \`NULL\`|
|tsquery_col|**tsquery** \`NULL\`|
|tsvector_col|**tsvector** \`NULL\`|
|txid_snapshot_col|**txid_snapshot** \`NULL\`|
|uuid_col|**uuid** \`NULL\`|
|xml_col|**xml** \`NULL\`|
|item|**inventory_item** \`NOT_NULL\`|
|state|**account_state** \`NULL\`|
||This column is an enum.|
||  It also contains several lines:|
||    - line1|
||    - line2|
|state_arr|**account_state[]** \`NULL\`|
|item_arr|**inventory_item[]** \`NULL\`|
|static_arr|**int8[]** \`NULL\`|",
  "display": "all_types Table",
  "end": 33,
  "start": 25,
}
`;
